Added Directory.Packages.props and Moved all Propery to this file

--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -21,7 +21,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Starter_Db;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=Starter_Db;Trusted_Connection=True;TrustServerCertificate=true;"
 
   },
   "JwtSettings": {
