--- a/src/API/Starter.API/Starter.API.csproj
+++ b/src/API/Starter.API/Starter.API.csproj
@@ -1,27 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <InvariantGlobalization>false</InvariantGlobalization>
-  </PropertyGroup>
+	<PropertyGroup>
+		<InvariantGlobalization>false</InvariantGlobalization>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Serilog" Version="3.1.1" />
-    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
-    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Serilog" />
+		<PackageReference Include="Serilog.AspNetCore" />
+		<PackageReference Include="Serilog.Extensions.Logging" />
+		<PackageReference Include="Serilog.Settings.Configuration" />
+		<PackageReference Include="Serilog.Sinks.File" />
+		<PackageReference Include="Swashbuckle.AspNetCore" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Core\Starter.Application\Starter.Application.csproj" />
-    <ProjectReference Include="..\..\InfraStructure\Starter.Identity\Starter.Identity.csproj" />
-    <ProjectReference Include="..\..\InfraStructure\Starter.InfraStructure\Starter.InfraStructure.csproj" />
-    <ProjectReference Include="..\..\InfraStructure\Starter.Persistence\Starter.Persistence.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Core\Starter.Application\Starter.Application.csproj" />
+		<ProjectReference Include="..\..\InfraStructure\Starter.Identity\Starter.Identity.csproj" />
+		<ProjectReference Include="..\..\InfraStructure\Starter.InfraStructure\Starter.InfraStructure.csproj" />
+		<ProjectReference Include="..\..\InfraStructure\Starter.Persistence\Starter.Persistence.csproj" />
+	</ItemGroup>
 
 </Project>
