--- a/src/InfraStructure/Starter.InfraStructure/Starter.InfraStructure.csproj
+++ b/src/InfraStructure/Starter.InfraStructure/Starter.InfraStructure.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
   </ItemGroup>
 
   <ItemGroup>
