--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -28,6 +28,7 @@
     "Key": "73AE92E6113F4369A713A94C5A9C6B15",
     "Issuer": "StarterIdentity",
     "Audience": "StarterIdentityUser",
-    "DurationInMinutes": 60
+    "DurationInMinutes": 60,
+    "RefreshTokenExpirationInDays": 7
   }
 }
