Added Docker Compose Project

--- a/src/API/Starter.API/Starter.API.csproj
+++ b/src/API/Starter.API/Starter.API.csproj
@@ -2,6 +2,10 @@
 
 	<PropertyGroup>
 		<InvariantGlobalization>false</InvariantGlobalization>
+		<UserSecretsId>445d1c29-c0fc-4d5a-84ee-f0d860713336</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..\..</DockerfileContext>
+		<DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -9,6 +13,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
 		<PackageReference Include="Serilog" />
 		<PackageReference Include="Serilog.AspNetCore" />
 		<PackageReference Include="Serilog.Extensions.Logging" />
