--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,13 +5,13 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <!--Starter.API Package References-->
   <ItemGroup>
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
+    <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageVersion Include="Serilog" Version="3.1.1" />
     <PackageVersion Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageVersion Include="Serilog.Extensions.Logging" Version="8.0.0" />
@@ -20,7 +20,6 @@
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
   <!--Starter.API Package References-->
-
   <!--Starter.Application Package References-->
   <ItemGroup>
     <PackageVersion Include="AutoMapper" Version="12.0.1" />
@@ -30,13 +29,11 @@
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
   </ItemGroup>
   <!--Starter.Application Package References-->
-
   <!--Starter.Domain Package References-->
   <ItemGroup>
     <PackageVersion Include="MediatR" Version="12.2.0" />
   </ItemGroup>
   <!--Starter.Domain Package References-->
-
   <!--Starter.Identity Package References-->
   <ItemGroup>
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
@@ -49,13 +46,11 @@
     </PackageVersion>
   </ItemGroup>
   <!--Starter.Identity Package References-->
-
   <!--Starter.InfraStructure Package References-->
   <ItemGroup>
     <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
   </ItemGroup>
   <!--Starter.InfraStructure Package References-->
-
   <!--Starter.Persistence Package References-->
   <ItemGroup>
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
@@ -66,7 +61,6 @@
     </PackageVersion>-->
   </ItemGroup>
   <!--Starter.Persistence Package References-->
-
   <!--Blazor.Starter Package References-->
   <ItemGroup>
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.13" />
