Docker Containerize Setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,37 @@ version: '3.4'
 
 services:
   starter.api:
-    image: ${DOCKER_REGISTRY-}starterapi
+    image: ${DOCKER_REGISTRY-}starter.api
     build:
       context: .
       dockerfile: src/API/Starter.API/Dockerfile
+    ports:
+      - "10001:8080"
+    depends_on:
+      - "sqlserver"
+  
+  starter.angular:
+    image: ${DOCKER_REGISTRY-}starter.angular
+    container_name: starter.angular
+    build:
+      context: .
+      dockerfile: src/UI/Angular/Dockerfile
+    ports:
+      - "10002:80"
+
+  starter.blazor:
+    image: ${DOCKER_REGISTRY-}starter.blazor
+    container_name: starter.blazor
+    build:
+      context: .
+      dockerfile: src/UI/Blazor/Dockerfile
+    ports:
+      - "10003:80"
+
+  sqlserver:
+    image: mcr.microsoft.com/azure-sql-edge
+    ports:
+      - "1433:1433"
+    environment:
+      - SA_PASSWORD=STARTER
+      - ACCEPT_EULA=Y
