--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,12 +3,14 @@ version: '3.4'
 services:
   starter.api:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
-    ports:
-      - "8080"
-      - "8081"
+    
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+  
+  starter.blazor:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Docker
