--- a/src/UI/Blazor/nginx.conf
+++ b/src/UI/Blazor/nginx.conf
@@ -1,15 +1,13 @@
 events { }
-   http {
-      include mime.types;
-      types {
-         application/wasm wasm;
-       }
-     server {
+http {
+    include mime.types;
+
+    server {
         listen 80;
-        index index.html;
+
         location / {
-           root /var/www/web;
-           try_files $uri $uri/ /index.html =404;
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html =404;
         }
-     }
+    }
 }
