--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,11 +1,11 @@
 version: '3.4'
 
 services:
-  starter.api:
+  starter.webapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_HTTP_PORTS=8080
-      - ASPNETCORE_HTTPS_PORTS=8081
+      # - ASPNETCORE_HTTPS_PORTS=8081
     
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
