--- a/src/API/Starter.API/appsettings.Docker.json
+++ b/src/API/Starter.API/appsettings.Docker.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver,1433;Integrated Security=true;Initial Catalog=Starter.Docker.DB;User Id=sa;Password=STARTER;Trusted_Connection=false;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=starter.sqlserver,1433;Integrated Security=true;Initial Catalog=Starter.Docker.DB;User Id=sa;Password=Your!Strong#Password;Trusted_Connection=false;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
