Authorization related code implemetation

--- a/src/API/Starter.API/appsettings.Development.json
+++ b/src/API/Starter.API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppSettings": {
+    "UserEmail": "me@starter.com",
+    "UserPassword": "Starter1!"
   }
+
 }
