Roles and Claims based Permissions module added.

--- a/src/API/Starter.API/appsettings.Development.json
+++ b/src/API/Starter.API/appsettings.Development.json
@@ -7,7 +7,13 @@
   },
   "AppSettings": {
     "UserEmail": "me@starter.com",
-    "UserPassword": "Starter1!"
+    "UserPassword": "Starter1!",
+    "FirstName": "Starter",
+    "LastName": "=",
+    "Email": "me@starter.com",
+    "UserName": "me@starter.com",
+    "NormalizedEmail": "me@starter.com",
+    "NormalizedUserName": "me@starter.com"
   }
 
 }
