--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -30,5 +30,8 @@
     "Audience": "StarterIdentityUser",
     "DurationInMinutes": 60,
     "RefreshTokenExpirationInDays": 7
+  },
+  "LoggerSettings": {
+    "AppName": "Commissio"
   }
-}
+  }
