--- a/src/API/Starter.API/appsettings.Development.json
+++ b/src/API/Starter.API/appsettings.Development.json
@@ -14,6 +14,11 @@
     "UserName": "me@starter.com",
     "NormalizedEmail": "me@starter.com",
     "NormalizedUserName": "me@starter.com"
+  },
+  "Gmail": {
+    "clientId": "337067887447-85es46uns4co8denj45mivdee561r88b.apps.googleusercontent.com",
+    "secret": "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"
   }
+
 
 }
