Made Signin and Signup UI

--- a/src/UI/Angular/angular.json
+++ b/src/UI/Angular/angular.json
@@ -35,6 +35,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.css",
               "src/assets/css/app.css"
             ],
             "scripts": []
@@ -51,6 +52,12 @@
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
                   "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
                 }
               ],
               "outputHashing": "all"
