Added Balzor UI Folder Structure

--- a/src/UI/Blazor/Starter.Blazor.csproj
+++ b/src/UI/Blazor/Starter.Blazor.csproj
@@ -12,4 +12,14 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Auth\" />
+    <Folder Include="Modules\Settings\" />
+    <Folder Include="Modules\Users\" />
+    <Folder Include="Modules\Task\" />
+    <Folder Include="Shared\Components\Button\" />
+    <Folder Include="Shared\Components\Grid\" />
+    <Folder Include="Shared\Utility\" />
+  </ItemGroup>
+
 </Project>
