Looger name change

--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -32,6 +32,6 @@
     "RefreshTokenExpirationInDays": 7
   },
   "LoggerSettings": {
-    "AppName": "Commissio"
+    "AppName": "Starter"
   }
-  }
+}
