--- a/src/InfraStructure/Starter.InfraStructure/Starter.InfraStructure.csproj
+++ b/src/InfraStructure/Starter.InfraStructure/Starter.InfraStructure.csproj
@@ -1,7 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Hangfire" />
+    <PackageReference Include="IdentityStream.Hangfire.Console" />
+    <PackageReference Include="MailKit" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+    <PackageReference Include="RazorEngineCore" />
+    <PackageReference Include="Serilog" />
   </ItemGroup>
 
   <ItemGroup>
