--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,6 +22,7 @@
   <!--Starter.API Package References-->
   <!--Starter.Application Package References-->
   <ItemGroup>
+    <PackageVersion Include="Ardalis.Specification" Version="8.0.0" />
     <PackageVersion Include="AutoMapper" Version="12.0.1" />
     <PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageVersion Include="FluentValidation" Version="11.8.1" />
@@ -36,6 +37,7 @@
   <!--Starter.Domain Package References-->
   <!--Starter.Identity Package References-->
   <ItemGroup>
+    <PackageVersion Include="Ardalis.Specification.EntityFrameworkCore" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
