Invite User Implemented

--- a/src/API/Starter.API/Starter.API.csproj
+++ b/src/API/Starter.API/Starter.API.csproj
@@ -33,4 +33,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Content Remove="EmailTemplates\InviteUser.cshtml" />
+  </ItemGroup>
 </Project>
