--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -42,6 +42,11 @@
     "Port": 587,
     "UserName": "commissio.inbound@gmail.com"
   },
+  "CorsSettings": {
+    "Angular": "http://localhost:4200",
+    "Blazor": "http://localhost:4200",
+    "CorsURLs": "http://localhost:4200"
+  },
   "HangfireSettings": {
     "Route": "/jobs",
     "Dashboard": {
