Invite User New

--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -76,6 +76,11 @@
     "Credentials": {
       "User": "Admin",
       "Password": "S3(r3tP@55w0rd"
+    },
+    "CorsSettings": {
+      "Angular": "http://localhost:4200",
+      "Blazor": "http://localhost:4200",
+      "CorsURLs": "http://localhost:4200"
     }
   }
 }
