User-List Page with Filters & Refresh Token Logic Verified.

--- a/src/UI/Angular/package.json
+++ b/src/UI/Angular/package.json
@@ -18,14 +18,15 @@
     "@angular/platform-browser": "^17.0.7",
     "@angular/platform-browser-dynamic": "^17.0.7",
     "@angular/router": "^17.0.7",
+    "@bhplugin/ng-datatable": "^0.1.0",
     "@ngrx/store": "^17.0.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "headlessui-angular": "^0.0.7",
     "jwt-decode": "^4.0.0",
     "ngx-scrollbar": "^13.0.3",
-    "sweetalert2": "^11.10.1",
     "rxjs": "~7.8.1",
+    "sweetalert2": "^11.10.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
   },
