Get Project Details API

--- a/src/Core/Starter.Application/Starter.Application.csproj
+++ b/src/Core/Starter.Application/Starter.Application.csproj
@@ -12,15 +12,12 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
     <PackageReference Include="FluentValidation" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+    <PackageReference Include="Microsoft.Extensions.Localization" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Starter.Domain\Starter.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\Projects\Query\" />
   </ItemGroup>
 
 </Project>
