--- a/src/UI/Blazor/Properties/launchSettings.json
+++ b/src/UI/Blazor/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7129;http://localhost:5254",
+      "applicationUrl": "https://localhost:7129;http://localhost:5254;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
