--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -42,45 +42,50 @@
     "Port": 587,
     "UserName": "commissio.inbound@gmail.com"
   },
-  "HangfireSettings": {
-    "Route": "/jobs",
-    "Dashboard": {
-      "AppPath": "/",
-      "StatsPollingInterval": 2000,
-      "DashboardTitle": "Jobs"
-    },
-    "Server": {
-      "HeartbeatInterval": "00:00:30",
-      "Queues": [
-        "default",
-        "notdefault"
-      ],
-      "SchedulePollingInterval": "00:00:15",
-      "ServerCheckInterval": "00:05:00",
-      "ServerName": null,
-      "ServerTimeout": "00:05:00",
-      "ShutdownTimeout": "00:00:15",
-      "WorkerCount": 5
-    },
-    "Storage": {
-      "StorageProvider": "sql",
-      "ConnectionString": "Server=.;Database=Starter_Db;Trusted_Connection=True;TrustServerCertificate=true;",
-      "Options": {
-        "CommandBatchMaxTimeout": "00:05:00",
-        "QueuePollInterval": "00:00:01",
-        "UseRecommendedIsolationLevel": true,
-        "SlidingInvisibilityTimeout": "00:05:00",
-        "DisableGlobalLocks": true
+  "CacheSettings": {
+    "UseDistributedCache": false,
+    "PreferRedis": false,
+    "RedisURL": "localhost:6379"
+  },
+    "HangfireSettings": {
+      "Route": "/jobs",
+      "Dashboard": {
+        "AppPath": "/",
+        "StatsPollingInterval": 2000,
+        "DashboardTitle": "Jobs"
+      },
+      "Server": {
+        "HeartbeatInterval": "00:00:30",
+        "Queues": [
+          "default",
+          "notdefault"
+        ],
+        "SchedulePollingInterval": "00:00:15",
+        "ServerCheckInterval": "00:05:00",
+        "ServerName": null,
+        "ServerTimeout": "00:05:00",
+        "ShutdownTimeout": "00:00:15",
+        "WorkerCount": 5
+      },
+      "Storage": {
+        "StorageProvider": "sql",
+        "ConnectionString": "Server=.;Database=Starter_Db;Trusted_Connection=True;TrustServerCertificate=true;",
+        "Options": {
+          "CommandBatchMaxTimeout": "00:05:00",
+          "QueuePollInterval": "00:00:01",
+          "UseRecommendedIsolationLevel": true,
+          "SlidingInvisibilityTimeout": "00:05:00",
+          "DisableGlobalLocks": true
+        }
+      },
+      "Credentials": {
+        "User": "Admin",
+        "Password": "S3(r3tP@55w0rd"
+      },
+      "CorsSettings": {
+        "Angular": "http://localhost:4200",
+        "Blazor": "http://localhost:4200",
+        "CorsURLs": "http://localhost:4200"
       }
-    },
-    "Credentials": {
-      "User": "Admin",
-      "Password": "S3(r3tP@55w0rd"
-    },
-    "CorsSettings": {
-      "Angular": "http://localhost:4200",
-      "Blazor": "http://localhost:4200",
-      "CorsURLs": "http://localhost:4200"
     }
   }
-}
