--- a/src/InfraStructure/Starter.InfraStructure/Starter.InfraStructure.csproj
+++ b/src/InfraStructure/Starter.InfraStructure/Starter.InfraStructure.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="Hangfire" />
     <PackageReference Include="IdentityStream.Hangfire.Console" />
     <PackageReference Include="MailKit" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     <PackageReference Include="RazorEngineCore" />
     <PackageReference Include="Serilog" />
