--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -43,8 +43,8 @@
     "UserName": "commissio.inbound@gmail.com"
   },
   "CacheSettings": {
-    "UseDistributedCache": true,
-    "PreferRedis": true,
+    "UseDistributedCache": false,
+    "PreferRedis": false,
     "RedisURL": "localhost:6379"
   },
     "HangfireSettings": {
