--- a/src/UI/Blazor/wwwroot/appsettings.json
+++ b/src/UI/Blazor/wwwroot/appsettings.json
@@ -1,5 +1,11 @@
 {
   "AppConfig": {
     "ApiUrl": "http://localhost:5287"
+  },
+  "JwtSecurityKey": {
+    "JwtSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHARED",
+    "JwtIssuer": "https://localhost:5287",
+    "JwtAudience": "https://localhost:5287",
+    "JwtExpiryInDays": 1
   }
 }
