--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -21,7 +21,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YASH-DESAI;Database=TestDBStarter;Trusted_Connection=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=.;Database=Starter_Db;Trusted_Connection=True;TrustServerCertificate=true;"
 
   },
   "JwtSettings": {
