Cors relaed updates and Front URL set

--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -36,7 +36,8 @@
   },
   "CorsSettings": {
     "Angular": "http://localhost:4200",
-    "CorsURLs": "http://localhost:4200"
+    "Blazor": "https://localhost:7129",
+    "CorsURLs": "http://localhost:4200;https://localhost:7129;http://localhost:5254"
   },
   "MailSettings": {
     "DisplayName": "Task Tracker",
