--- a/src/UI/Blazor/Starter.Blazor.csproj
+++ b/src/UI/Blazor/Starter.Blazor.csproj
@@ -1,6 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <ItemGroup>
+    <Compile Remove="Modules\Settings\**" />
+    <Compile Remove="Modules\Users\**" />
+    <Content Remove="Modules\Settings\**" />
+    <Content Remove="Modules\Users\**" />
+    <EmbeddedResource Remove="Modules\Settings\**" />
+    <EmbeddedResource Remove="Modules\Users\**" />
+    <None Remove="Modules\Settings\**" />
+    <None Remove="Modules\Users\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />
@@ -19,10 +30,7 @@
 
   <ItemGroup>
     <Folder Include="Modules\Login\Page\" />
-    <Folder Include="Modules\Settings\" />
-    <Folder Include="Modules\Users\" />
     <Folder Include="Modules\Task\" />
-    <Folder Include="Modules\User\Components\" />
     <Folder Include="Shared\Components\Button\" />
     <Folder Include="Shared\Components\Grid\" />
     <Folder Include="Shared\Utility\" />
