Vue application added to Starter

--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -37,7 +37,7 @@
   "CorsSettings": {
     "Angular": "http://localhost:4200",
     "Blazor": "https://localhost:7129",
-    "CorsURLs": "http://localhost:4200;https://localhost:7129;http://localhost:5254"
+    "CorsURLs": "http://localhost:4200;https://localhost:7129;http://localhost:5254;http://localhost:5173"
   },
   "MailSettings": {
     "DisplayName": "Task Tracker",
