--- a/src/UI/Vue/package.json
+++ b/src/UI/Vue/package.json
@@ -12,11 +12,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@bhplugin/vue3-datatable": "^1.1.3",
     "@vueuse/head": "^2.0.0",
     "highlight.js": "^11.9.0",
     "path": "^0.12.7",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.2",
+    "tippy.vue": "^3.2.1",
     "vue": "^3.3.11",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5",
