--- a/src/UI/Vue/package.json
+++ b/src/UI/Vue/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@bhplugin/vue3-datatable": "^1.1.3",
     "@vueuse/head": "^2.0.0",
+    "axios": "^1.6.4",
     "highlight.js": "^11.9.0",
     "path": "^0.12.7",
     "pinia": "^2.1.7",
