--- a/src/UI/Vue/package.json
+++ b/src/UI/Vue/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@bhplugin/vue3-datatable": "^1.1.3",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vueuse/head": "^2.0.0",
     "axios": "^1.6.4",
     "highlight.js": "^11.9.0",
