--- a/src/UI/Blazor/Starter.Blazor.csproj
+++ b/src/UI/Blazor/Starter.Blazor.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" />
+    <PackageReference Include="Blazored.Modal" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" />
@@ -34,7 +35,6 @@
     <Folder Include="Modules\Users\" />
     <Folder Include="Modules\ForgotPassword\" />
     <Folder Include="Modules\ResetPassword\" />
-    <Folder Include="Modules\Task\" />
     <Folder Include="Shared\Components\Button\" />
     <Folder Include="Shared\Components\Grid\" />
     <Folder Include="Shared\Utility\" />
