--- a/src/API/Starter.API/appsettings.Docker.json
+++ b/src/API/Starter.API/appsettings.Docker.json
@@ -8,5 +8,21 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "UserEmail": "me@starter.com",
+    "UserPassword": "Starter1!",
+    "FirstName": "Starter",
+    "LastName": "=",
+    "Email": "me@starter.com",
+    "UserName": "me@starter.com",
+    "NormalizedEmail": "me@starter.com",
+    "NormalizedUserName": "me@starter.com"
+  },
+  "CorsSettings": {
+    "Angular": "http://localhost:10002",
+    "Blazor": "http://localhost:10003",
+    "Vue": "http://localhost:10004",
+    "CorsURLs": "http://localhost:10002;http://localhost:10003;http://localhost:10004;"
   }
 }
