--- a/src/UI/Angular/tsconfig.json
+++ b/src/UI/Angular/tsconfig.json
@@ -2,7 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
+    "outDir": "./dist/starter.angular",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
