--- a/src/UI/Angular/conf/default.conf
+++ b/src/UI/Angular/conf/default.conf
@@ -38,6 +38,7 @@
 
 server {
   listen 80;
+  server_name angular-app;
   sendfile on;
   default_type application/octet-stream;
 
@@ -50,9 +51,9 @@ server {
   gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
   gzip_comp_level   9;
 
-  root /usr/share/nginx/html;
-
   location / {
+    root /usr/share/nginx/html;
+    index index.html index.htm;
     try_files $uri $uri/ /index.html =404;
   }
 }
