vue envrionment variable set for Docker env

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -14,3 +14,11 @@ services:
   starter.blazor:
     environment:
       - apiURL=http://localhost:10001
+
+  starter.vue:
+    environment:
+      - NODE_ENV=docker
+  
+  starter.angular:
+    environment:
+      - NODE_ENV=docker
