--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -21,8 +21,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Starter_Db;Trusted_Connection=True;TrustServerCertificate=true;"
-
+    "DefaultConnection": "Server=DESKTOP-A9HJCVA\\SQLEXPRESS;Database=Starter_Db;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "JwtSettings": {
     "Key": "73AE92E6113F4369A713A94C5A9C6B15",
