--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,3 +46,5 @@ services:
     environment:
       - SA_PASSWORD=Your!Strong#Password
       - ACCEPT_EULA=Y
+    volumes:
+      - C:\MSSQL\DockerFiles:/var/opt/mssql/data
