--- a/src/UI/Blazor/Starter.Blazor.csproj
+++ b/src/UI/Blazor/Starter.Blazor.csproj
@@ -31,7 +31,6 @@
 
   <ItemGroup>
     <Folder Include="Modules\Login\Page\" />
-    <Folder Include="Modules\Settings\" />
     <Folder Include="Modules\Users\" />
     <Folder Include="Modules\ForgotPassword\" />
     <Folder Include="Modules\ResetPassword\" />
@@ -39,5 +38,8 @@
     <Folder Include="Shared\Components\Grid\" />
     <Folder Include="Shared\Utility\" />
   </ItemGroup>
+  <PropertyGroup>
+    <BlazorLinkOnBuild>false</BlazorLinkOnBuild>
+  </PropertyGroup>
 
 </Project>
