docker connection string change for Hangfire

--- a/src/API/Starter.API/appsettings.Docker.json
+++ b/src/API/Starter.API/appsettings.Docker.json
@@ -24,5 +24,10 @@
     "Blazor": "http://localhost:10003",
     "Vue": "http://localhost:10004",
     "CorsURLs": "http://localhost:10002;http://localhost:10003;http://localhost:10004;"
+  },
+  "HangfireSettings": {
+    "Storage": {
+      "ConnectionString": "Server=starter.sqlserver,1433;Integrated Security=true;Initial Catalog=Starter.Docker.DB;User Id=sa;Password=Your!Strong#Password;Trusted_Connection=false;TrustServerCertificate=true;"
+    }   
   }
 }
