--- a/src/UI/Blazor/Starter.Blazor.csproj
+++ b/src/UI/Blazor/Starter.Blazor.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" />
     <PackageReference Include="Blazored.Modal" />
+    <PackageReference Include="DataTables.AspNet.Core" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" />
@@ -36,7 +37,6 @@
 
   <ItemGroup>
     <Folder Include="Modules\Login\Page\" />
-    <Folder Include="Modules\Users\" />
     <Folder Include="Modules\ForgotPassword\" />
     <Folder Include="Modules\ResetPassword\" />
     <Folder Include="Shared\Components\Button\" />
