--- a/src/UI/Angular/package.json
+++ b/src/UI/Angular/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.0.7",
     "@angular/router": "^17.0.7",
     "@bhplugin/ng-datatable": "^0.1.0",
+    "@microsoft/signalr": "^8.0.0",
     "@ngrx/store": "^17.0.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
