--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -23,7 +23,7 @@
   "CorsSettings": {
     "Angular": "http://localhost:4200",
     "Blazor": "https://localhost:7129",
-    "Vue": "https://localhost:5173",
+    "Vue": "http://localhost:5173",
     "CorsURLs": "http://localhost:4200;https://localhost:7129;http://localhost:5254;http://localhost:5173"
   },
   "MailSettings": {
