--- a/src/UI/Vue/package.json
+++ b/src/UI/Vue/package.json
@@ -18,6 +18,7 @@
     "@vueuse/head": "^2.0.0",
     "axios": "^1.6.4",
     "highlight.js": "^11.9.0",
+    "jwt-decode": "^4.0.0",
     "path": "^0.12.7",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.2",
