--- a/src/UI/Vue/package.json
+++ b/src/UI/Vue/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@bhplugin/vue3-datatable": "^1.1.3",
+    "@headlessui/vue": "^1.7.17",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/head": "^2.0.0",
