--- a/src/UI/Vue/tsconfig.json
+++ b/src/UI/Vue/tsconfig.json
@@ -1,11 +1,29 @@
 {
-  "files": [],
+  "compilerOptions": {
+      "target": "ESNext",
+      "useDefineForClassFields": true,
+      "module": "ESNext",
+      "moduleResolution": "Node",
+      "strict": true,
+      "jsx": "react",
+      "sourceMap": true,
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "esModuleInterop": true,
+      "lib": ["ESNext", "DOM"],
+      "skipLibCheck": true,
+      "baseUrl": "./",
+      "paths": {
+          "@/*": ["src/*"]
+      },
+      "noImplicitAny": false,
+      "allowJs": true,
+      "types": ["@intlify/vite-plugin-vue-i18n/client"]
+  },
+  "include": ["src/**/*.js", "src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [
-    {
-      "path": "./tsconfig.node.json"
-    },
-    {
-      "path": "./tsconfig.app.json"
-    }
+      {
+          "path": "./tsconfig.node.json"
+      }
   ]
 }
