--- a/src/UI/Vue/package.json
+++ b/src/UI/Vue/package.json
@@ -22,13 +22,16 @@
     "jwt-decode": "^4.0.0",
     "path": "^0.12.7",
     "pinia": "^2.1.7",
+    "quill": "^1.3.7",
     "sweetalert2": "^11.10.2",
     "tippy.vue": "^3.2.1",
     "vue": "^3.4.15",
+    "vue-flatpickr-component": "^11.0.3",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5",
     "vue3-perfect-scrollbar": "^1.6.1",
-    "vue3-popper": "^1.5.0"
+    "vue3-popper": "^1.5.0",
+    "vue3-quill": "^0.3.1"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^2.0.0",
