--- a/src/UI/Vue/package.json
+++ b/src/UI/Vue/package.json
@@ -31,7 +31,8 @@
     "vue-router": "^4.2.5",
     "vue3-perfect-scrollbar": "^1.6.1",
     "vue3-popper": "^1.5.0",
-    "vue3-quill": "^0.3.1"
+    "vue3-quill": "^0.3.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^2.0.0",
