--- a/src/UI/React/package.json
+++ b/src/UI/React/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^5.10.5",
+    "@mantine/hooks": "^5.10.5",
     "@reduxjs/toolkit": "^2.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
+    "@tippyjs/react": "^4.2.6",
+    "axios": "^1.6.7",
+    "formik": "^2.4.5",
     "highlight.js": "^11.9.0",
+    "mantine-datatable": "^1.7.17",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-animate-height": "^3.2.3",
@@ -22,7 +28,9 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "sweetalert2": "^11.10.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
