--- a/src/API/Starter.API/appsettings.json
+++ b/src/API/Starter.API/appsettings.json
@@ -24,6 +24,7 @@
     "Angular": "http://localhost:4200",
     "Blazor": "https://localhost:7129",
     "Vue": "http://localhost:5173",
+    "React": "http://localhost:5173",
     "CorsURLs": "http://localhost:4200;https://localhost:7129;http://localhost:5254;http://localhost:5173"
   },
   "MailSettings": {
