--- a/src/UI/React/package.json
+++ b/src/UI/React/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "highlight.js": "^11.9.0",
+    "jwt-decode": "^4.0.0",
     "mantine-datatable": "^1.7.17",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
