Delete modal popup implemented in react. Made common component with props.

--- a/src/UI/React/package.json
+++ b/src/UI/React/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@mantine/core": "^5.10.5",
     "@mantine/hooks": "^5.10.5",
     "@reduxjs/toolkit": "^2.1.0",
