--- a/src/UI/React/package.json
+++ b/src/UI/React/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@tippyjs/react": "^4.2.6",
+    "@types/react-flatpickr": "^3.8.11",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "highlight.js": "^11.9.0",
@@ -27,8 +28,10 @@
     "react": "^18.2.0",
     "react-animate-height": "^3.2.3",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "sweetalert2": "^11.10.5",
